# sifaka

./: .bandit  .coverage_adjustments  .coveragerc  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  ANALYSIS.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  ASYNC_REMOVAL_PLAN.md  CHANGELOG.md  CIRCULAR_DEPENDENCIES_RESOLUTION.md  CIRCULAR_DEPENDENCIES_RESOLUTION_PLAN.md  CIRCULAR_DEPENDENCIES_RESOLUTION_PROGRESS.md  CNAME  CODE_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  COMMIT_INSTRUCTIONS.md  COMPLETED_IMPROVEMENTS.md  COMPONENT_INITIALIZATION.md  CON.md  CONFIG_REFACTORING_PLAN.md  CONTEXT_MIXIN_ACHIEVEMENT.md  CONTEXT_MIXIN_QUICK_REFERENCE.md  CONTINUATION_NOTES.md  CONTRIBUTING.md  CONTRIBUTING_TO_VISION.md  CRITICS_CONSISTENCY_REPORT.md  CRITICS_UPDATE_COMPLETE.md  CRITIC_IMPROVEMENTS.md  DEPENDENCY_INJECTION_ENHANCEMENT.md  DEPENDENCY_MANAGEMENT_PLAN.md  DEPENDENCY_MANAGEMENT_SUMMARY.md  DEPENDENCY_REFACTORING_PLAN.md  (+199 more)
.github/: pull_request_template.md
FAQ/: index.html
_sifaka/: errors.py
analysis/: README.md  constitutional_critic_thoughts_analysis_summary.txt  constitutional_critic_thoughts_visualization.html  meta_rewarding_example_thoughts_visualization.html  n_critics_thoughts_analysis_summary.txt  n_critics_thoughts_visualization.html  prompt_critic_example_thoughts_visualization.html  reflexion_self_evaluation_thoughts_visualization.html  self_consistency_example_thoughts_analysis_summary.txt  self_consistency_example_thoughts_visualization.html  self_rag_example_thoughts_visualization.html
architecture/: index.html
benchmarks/: README.md  __init__.py  benchmark_classifiers.py  benchmark_config.py  benchmark_rules.py  benchmark_runner.py  benchmark_sifaka.py  model_comparison.py  performance_benchmarks.py  run_benchmarks.py  run_simple_benchmark.py  simple_benchmark.py  test_performance.py  visualize_results.py
critics/: base.py  prompt.py  protocols.py
demos/: streamlit_demo.py
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  BACKENDS.md  CHAIN.md  CHECKPOINT_RECOVERY.md  CLASSIFIERS.md  COMPONENTS.md  CONTRIBUTING.md  CRITICS.md  CRITIC_COMPARISON_TABLE.md  CRITIC_SELECTION_GUIDE.md  DESIGN_DECISIONS.md  DOCUMENTATION_GUIDE.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  MODELS.md  PERFORMANCE.md  README.md  RETRIEVERS.md  SIMPLE_FEATURES.md  STORAGE.md  TOOL_DISCOVERY.md  TROUBLESHOOTING.md  VALIDATORS.md  VISION.md  adapter_template.py  adapters.md  architecture.md  chain_architecture.md  ci_cd.md  classifier_template.py  classifiers.md  component_initialization.md  composition_over_inheritance.md  configuration.md  contributing.md  critics_standardization.md  dependencies.md  (+27 more)
examples/: README.md  adapter_example.py  advanced_chain_example.py  advanced_classifiers_example.py  advanced_features.py  advanced_multi_classifier_critic.py  advanced_rules_example.py  anthropic_classifier_ncritics_example.py  basic_chain.py  basic_example.py  basic_usage.py  basic_usage_with_logging.py  chain_with_classifiers.py  classifier_validator_example.py  classifier_validators_example.py  classifiers_example.py  claude_expand_length_critic.py  claude_gemini_example.py  claude_length_critic.py  combined_classifiers.py  comprehensive_analysis.py  comprehensive_content_validation.py  config_example.py  constitutional_critic.py  constitutional_critic_detailed.py  constitutional_critic_example.py  constitutional_example.py  critic_comparison_example.py  critic_language_test.py  critics_example.py  dependency_injection_example.py  fact_checker.py  flexible_hybrid_example.py  gpt2_classifier_example.py  gpt4_with_claude_critics_example.py  guardrails_integration_example.py  guardrails_validation_example.py  guardrails_validator_example.py  langchain_integration_example.py  langgraph_integration_example.py  (+65 more)
installation/: index.html
isolated/: test_prompt.py  test_reflexion.py
monitoring/: index.html  monitor.py
plugin_api_reference/: index.html
plugin_best_practices/: index.html
plugin_development/: index.html
rules/: format.py  length.py  prohibited_content.py  sentiment.py  template.py  toxicity.py
scripts/: README.md  __init__.py  analyze_dependencies.py  analyze_thoughts.py  standardize_direct_state_init.py  standardize_error_handling.py  standardize_patterns.py  standardize_rule_state.py  standardize_rule_state_management.py  standardize_rule_state_type.py  standardize_state_management.py  thought_digest.py
search/: search_index.json
sifaka/: __init__.py  __init__.py.new  __init__.pyi  advanced.py  api.py  chain.py  chain.py.new  config.py  errors.py  factories.py  fluent.py  generation.py  improvement.py  interfaces.py  monitoring.py  plugins.py  presets.py  presets.pyi  quickstart.py  reflector.py  registry.py  results.py  validation.py
sifaka_attempt/: __init__.py  chain.py  types.py
sifaka_legacy/: README.md  README.md.original  __init__.py  pyproject.toml
templates/: create_plugin.py
tests/: README.md  __init__.py  conftest.py  fix_test_issues.py  mock_utils.py  run_classifier_tests.py  run_comprehensive_tests.py  run_feedback_tests.py  run_integration_tests.py  run_tests.py  run_unit_tests.py  test_all_critics.py  test_anthropic_model.py  test_api_fixes.py  test_async_migration.py  test_base_model_detailed.py  test_basic.py  test_chain.py  test_chain_core.py  test_chain_refactor.py  test_checkpoint_recovery.py  test_classifier_base.py  test_classifier_validator_detailed.py  test_classifiers.py  test_components.py  test_concurrency_advanced.py  test_confidence.py  test_config.py  test_config_engine_comprehensive.py  test_constitutional.py  test_context_mixin_demo.py  test_critics.py  test_critics_comprehensive.py  test_critics_constitutional.py  test_critics_meta_rewarding.py  test_critics_n_critics.py  test_critics_prompt.py  test_critics_reflexion.py  test_critics_self_consistency.py  test_critics_self_rag.py  (+87 more)
thirdparties/: agno_agents.py
thoughts/: 0bfefb35-2a72-4f66-bd43-9d32d536e4fe.json  0ff23e6b-46d4-4589-acf3-6ea339a68d16.json  2e418cc0-165f-4648-af62-fb53d1da6221.json  (+18 more)
(+1594 files in other folders)
